--- a/css/creative.css
+++ b/css/creative.css
@@ -97,7 +97,7 @@ img::-moz-selection {
 }
 
 #mainNav .navbar-brand:focus, #mainNav .navbar-brand:hover {
-  color: #f05f40;
+  color: #226262;
 }
 
 #mainNav .navbar-nav > li.nav-item > a.nav-link,
